--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": "",
+  "repository": "https://github.com/hull/nodejs_client.git",
   "author": "Xavier Cambar <xavier@hull.io>",
   "license": "MIT"
 }
