--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hull",
   "version": "0.0.0",
   "description": "A Node.js client for hull.io APIs",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
