--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "name": "hull",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "A Node.js client for hull.io APIs",
+  
   "main": "lib/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+
   "repository": "https://github.com/hull/hull-node.git",
   "author": "Xavier Cambar <xavier@hull.io>",
-  "license": "MIT"
+  "license": "MIT",
+
+  "scripts": {
+    "test": "echo \"Error: no test specified yet\" && exit 1"
+  },
+
+  "dependencies": {
+    "superagent": "0.14.x"
+  }
 }
