--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "superagent": "~0.16.0",
-    "underscore": "~1.4.4"
+    "underscore": "~1.4.4",
+    "jwt-simple": "~0.2.0"
   },
   "devDependencies": {
     "mocha": "~1.10.0",
