--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "superagent": "~0.16.0",
     "underscore": "~1.4.4",
-    "jwt-simple": "~0.2.0"
+    "jwt-simple": "~0.2.0",
+    "raw-body": "~1.1.6"
   },
   "devDependencies": {
     "mocha": "~1.10.0",
