--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
   "name": "hull",
-  "version": "0.4.1",
+  "version": "0.5.0",
   "description": "A Node.js client for hull.io APIs",
-  "main": "lib/index.js",
+  "main": "/index.js",
   "repository": "https://github.com/hull/hull-node.git",
-  "author": "Xavier Cambar <xavier@hull.io>, Stephane Bellity <stephane@hull.io>",
+  "author": "Romain Dardour <romain@hull.io>, Xavier Cambar <xavier@hull.io>, Stephane Bellity <stephane@hull.io>",
   "license": "MIT",
   "scripts": {
     "test": "`npm bin`/mocha spec/*"
   },
   "dependencies": {
-    "superagent": "~0.16.0",
-    "underscore": "~1.4.4",
-    "jwt-simple": "~0.2.0",
-    "raw-body": "~1.1.6"
+    "babel": "^5.8.23",
+    "crypto": "0.0.3",
+    "gulp-mocha": "^2.1.3",
+    "jwt-simple": "^0.3.1",
+    "lodash": "^3.10.0",
+    "raw-body": "^2.1.4",
+    "restler": "^3.4.0"
   },
   "devDependencies": {
-    "mocha": "~1.10.0",
-    "sinon-chai": "~2.4.0",
-    "chai": "~1.6.1",
-    "sinon": "~1.7.2"
+    "eslint": "^1.6.0",
+    "eslint-config-airbnb": "^0.1.0",
+    "eslint-plugin-react": "^3.5.1",
+    "babel-eslint": "^4.1.3",
+    "babel-plugin-lodash": "^0.2.0",
+    "mocha": "~2.3.3",
+    "sinon-chai": "~2.8.0",
+    "chai": "~3.3.0",
+    "sinon": "~1.17.1"
   }
 }
