--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "babel": "^5.8.23",
     "crypto": "0.0.3",
+    "eslint-config-airbnb-es5": "^1.0.8",
     "gulp-mocha": "^2.1.3",
     "jwt-simple": "^0.3.1",
     "lodash": "^3.10.0",
