--- a/.env.sh.sample
+++ b/.env.sh.sample
@@ -1,3 +1,4 @@
 export HULL_PLATFORM_ID='YOUR_HULL_PLATFORM_ID'
 export HULL_PLATFORM_SECRET='YOUR_HULL_PLATFORM_SECRET'
 export HULL_ORG_URL='YOUR_HULL_ORG_URL'
+export HULL_ME_TEST='A_USER_ID_TO_TEST'
