--- a/package.json
+++ b/package.json
@@ -3,32 +3,64 @@
   "version": "0.5.0",
   "description": "A Node.js client for hull.io APIs",
   "main": "dist/index.js",
-  "repository": "https://github.com/hull/hull-node.git",
-  "author": "Romain Dardour <romain@hull.io>, Xavier Cambar <xavier@hull.io>, Stephane Bellity <stephane@hull.io>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hull/hull-node.git"
+  },
+  "homepage": "https://github.com/hull/hull-node",
+  "bugs": {
+    "url": "https://github.com/hull/hull-node/issues"
+  },
+  "author": "Romain Dardour <romain@hull.io>",
   "license": "MIT",
   "scripts": {
     "test": "`npm bin`/mocha spec/*",
-    "postinstall": "./node_modules/.bin/babel lib --out-dir dist"
+    "coverage": "gulp coverage",
+    "build": "gulp build",
+    "prepublish": "npm run build"
   },
   "dependencies": {
-    "babel": "^5.8.23",
     "crypto": "0.0.3",
     "eslint-config-airbnb-es5": "^1.0.8",
-    "gulp-mocha": "^2.1.3",
+    "gulp-mocha": "^2.2.0",
     "jwt-simple": "^0.3.1",
-    "lodash": "^3.10.0",
+    "lodash": "^3.10.1",
     "raw-body": "^2.1.4",
     "restler": "^3.4.0"
   },
   "devDependencies": {
-    "eslint": "^1.6.0",
-    "eslint-config-airbnb": "^0.1.0",
-    "eslint-plugin-react": "^3.5.1",
-    "babel-eslint": "^4.1.3",
-    "babel-plugin-lodash": "^0.2.0",
-    "mocha": "~2.3.3",
-    "sinon-chai": "~2.8.0",
-    "chai": "~3.3.0",
-    "sinon": "~1.17.1"
+    "babel": "^6.1.18",
+    "babel-cli": "^6.1.18",
+    "babel-eslint": "^4.1.5",
+    "babel-plugin-lodash": "^1.0.2",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-stage-0": "^6.1.18",
+    "chai": "^3.4.1",
+    "del": "^2.1.0",
+    "eslint": "^1.9.0",
+    "eslint-config-airbnb": "^1.0.0",
+    "eslint-plugin-react": "^3.9.0",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.0",
+    "gulp-istanbul": "^0.10.2",
+    "gulp-jscs": "^3.0.2",
+    "gulp-jshint": "^1.12.0",
+    "gulp-load-plugins": "^1.1.0",
+    "gulp-mocha": "^2.2.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.0.1",
+    "isparta": "^4.0.0",
+    "jshint-stylish": "^2.1.0",
+    "mkdirp": "^0.5.1",
+    "mocha": "^2.3.4",
+    "sinon": "^1.17.2",
+    "sinon-chai": "^2.8.0"
+  },
+  "nodeBoilerplateOptions": {
+    "mochaGlobals": [
+      "stub",
+      "spy",
+      "expect"
+    ]
   }
 }
