--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-plugin-lodash": "^1.0.2",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-stage-0": "^6.1.18",
+    "babel-register": "^6.1.18",
     "chai": "^3.4.1",
     "del": "^2.1.0",
     "eslint": "^1.9.0",
