--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hull",
   "version": "0.5.0",
   "description": "A Node.js client for hull.io APIs",
-  "main": "dist/index.js",
+  "main": "lib",
   "repository": {
     "type": "git",
     "url": "https://github.com/hull/hull-node.git"
