--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "sns-validator": "^0.2.0"
   },
   "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-cli": "^6.7.5",
+    "babel-core": "^6.7.0",
     "babel-eslint": "^6.0.2",
     "babel-plugin-lodash": "^2.2.2",
     "babel-preset-es2015": "^6.6.0",
