--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "connect": "^3.4.1",
+    "del": "^2.2.0",
+    "gulp-babel": "^6.1.2",
     "jwt-simple": "^0.4.1",
     "lodash": "^4.5.1",
     "object-mapper": "^3.0.0",
@@ -49,7 +51,6 @@
     "gulp-jscs": "^3.0.2",
     "gulp-jshint": "^2.0.0",
     "gulp-load-plugins": "^1.2.0",
-    "gulp-mocha": "^2.2.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "isparta": "^4.0.0",
