--- a/package.json
+++ b/package.json
@@ -17,40 +17,43 @@
     "test": "`npm bin`/mocha spec/*",
     "coverage": "gulp coverage",
     "build": "gulp build",
+    "watch": "gulp watch",
     "prepublish": "npm run build"
   },
   "dependencies": {
+    "body-parser": "^1.15.1",
     "connect": "^3.4.1",
     "del": "^2.2.0",
+    "express": "^4.14.0",
     "gulp-babel": "^6.1.2",
-    "jwt-simple": "^0.4.1",
-    "lodash": "^4.5.1",
-    "object-mapper": "^3.0.0",
+    "jwt-simple": "^0.5.0",
+    "lodash": "^4.13.1",
+    "object-mapper": "^3.0.1",
+    "passport": "^0.3.2",
     "raw-body": "^2.1.5",
     "restler": "^3.4.0",
     "sns-validator": "^0.2.1"
   },
   "devDependencies": {
-    "gulp-mocha": "^2.2.0",
     "babel": "^6.5.2",
     "babel-cli": "^6.5.1",
-    "babel-eslint": "^5.0.0",
-    "babel-plugin-lodash": "^2.1.0",
-    "babel-preset-es2015": "^6.5.0",
+    "babel-eslint": "^6.0.4",
+    "babel-plugin-lodash": "^3.2.0",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.5.2",
+    "babel-register": "^6.9.0",
+    "eslint": "^2.12.0",
+    "eslint-config-airbnb-base": "^3.0.1",
+    "eslint-plugin-import": "^1.8.1",
     "chai": "^3.5.0",
     "del": "^2.2.0",
-    "eslint": "^2.2.0",
-    "eslint-config-airbnb": "^6.0.2",
-    "eslint-config-airbnb-es5": "^1.0.8",
-    "eslint-plugin-react": "^4.1.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-istanbul": "^0.10.3",
     "gulp-jscs": "^3.0.2",
     "gulp-jshint": "^2.0.0",
     "gulp-load-plugins": "^1.2.0",
+    "gulp-mocha": "^2.2.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "isparta": "^4.0.0",
