--- a/.eslintrc
+++ b/.eslintrc
@@ -1,28 +1,21 @@
 {
   "parser": "babel-eslint",
-  "globals": {
-    "Hull": true
+  "globals": {},
+  "env": {
+    "es6": true
   },
   "rules": {
-    "camelcase": [2, { "properties": "never" }],
-    "func-names": [0],
-    "indent": [2, 2],
-    "no-var": [0],
+    "comma-dangle": [0],
+    "max-len": [0],
+    "camelcase": [0],
+    "quotes": [2, "double"],
+    "prefer-arrow-callback": [0],
+    "new-cap": [0],
+    "no-underscore-dangle": [0],
+    "arrow-body-style" : [0],
+    "no-param-reassign" : [0],
     "no-console": [0],
-    "no-eq-null": [0],
-    "no-extra-parens": [0],
-    "comma-dangle": [2, "never"],
-    "no-loop-func": [0],
-    "no-multi-spaces": [2],
-    "no-param-reassign": [0],
-    "id-length": [0],
-    "quote-props": [2, "consistent-as-needed"],
-    "no-script-url": [0],
-    "no-undefined": [2],
-    "no-undef-init": [2],
-    "no-unused-vars": [2],
-    "quotes": [2, "single", "avoid-escape"],
-    "strict": [0]
+    "eqeqeq": [1]
   },
-  "extends": "airbnb-es5"
+  "extends": "airbnb-base"
 }
