--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hull",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "description": "A Node.js client for hull.io",
   "main": "lib",
   "repository": {
@@ -21,11 +21,12 @@
     "prepublish": "npm run build"
   },
   "dependencies": {
+    "JSONStream": "^1.1.2",
     "body-parser": "^1.15.1",
     "connect": "^3.4.1",
+    "csv-stream": "^0.1.3",
     "del": "^2.2.0",
     "express": "^4.14.0",
-    "gulp-babel": "^6.1.2",
     "jwt-simple": "^0.5.0",
     "lodash": "^4.13.1",
     "object-mapper": "^3.0.1",
