--- a/package.json
+++ b/package.json
@@ -22,45 +22,41 @@
   },
   "dependencies": {
     "JSONStream": "^1.1.2",
-    "body-parser": "^1.15.1",
+    "body-parser": "^1.15.2",
     "connect": "^3.4.1",
     "csv-stream": "^0.1.3",
-    "del": "^2.2.0",
+    "del": "^2.2.1",
     "express": "^4.14.0",
     "jwt-simple": "^0.5.0",
     "lodash": "^4.13.1",
     "object-mapper": "^3.0.1",
     "passport": "^0.3.2",
-    "raw-body": "^2.1.5",
+    "raw-body": "^2.1.7",
+    "request": "^2.72.0",
     "restler": "^3.4.0",
     "sns-validator": "^0.2.1"
   },
   "devDependencies": {
     "babel": "^6.5.2",
-    "babel-cli": "^6.5.1",
-    "babel-eslint": "^6.0.4",
+    "babel-eslint": "^6.0.5",
     "babel-plugin-lodash": "^3.2.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
-    "eslint": "^2.12.0",
-    "eslint-config-airbnb-base": "^3.0.1",
-    "eslint-plugin-import": "^1.8.1",
     "chai": "^3.5.0",
     "del": "^2.2.0",
+    "eslint": "^2.13.1",
+    "eslint-config-airbnb-base": "^3.0.1",
+    "eslint-plugin-import": "^1.9.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-istanbul": "^0.10.3",
-    "gulp-jscs": "^3.0.2",
-    "gulp-jshint": "^2.0.0",
     "gulp-load-plugins": "^1.2.0",
     "gulp-mocha": "^2.2.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "isparta": "^4.0.0",
-    "jshint-stylish": "^2.1.0",
     "mkdirp": "^0.5.1",
-    "mocha": "^2.4.5",
+    "mocha": "^2.5.3",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0"
   },
