--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hull",
-  "version": "0.7.1",
+  "version": "0.7.3",
   "description": "A Node.js client for hull.io",
   "main": "lib",
   "repository": {
@@ -58,7 +58,8 @@
     "mkdirp": "^0.5.1",
     "mocha": "^2.5.3",
     "sinon": "^1.17.3",
-    "sinon-chai": "^2.8.0"
+    "sinon-chai": "^2.8.0",
+    "updtr": "^0.1.15"
   },
   "nodeBoilerplateOptions": {
     "mochaGlobals": [
