--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hull",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "description": "A Node.js client for hull.io",
   "main": "lib",
   "repository": {
@@ -26,6 +26,7 @@
     "connect": "^3.4.1",
     "csv-stream": "^0.1.3",
     "del": "^2.2.1",
+    "ejs": "^2.4.2",
     "express": "^4.14.0",
     "jwt-simple": "^0.5.0",
     "lodash": "^4.13.1",
@@ -34,7 +35,8 @@
     "raw-body": "^2.1.7",
     "request": "^2.72.0",
     "restler": "^3.4.0",
-    "sns-validator": "^0.2.1"
+    "sns-validator": "^0.2.1",
+    "winston": "^2.2.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
