--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
   "author": "Romain Dardour <romain@hull.io>",
   "license": "MIT",
   "scripts": {
-    "test": "`npm bin`/mocha spec/*",
+    "test": "npm run test:lint && npm run test:units",
+    "test:lint": "./node_modules/.bin/eslint server",
+    "test:modules": "npm outdated --depth=0",
+    "test:units": "NODE_ENV=test ./node_modules/.bin/mocha -R spec ./tests/index",
+    "update": "./node_modules/.bin/updtr",
+    "clean": "./node_modules/.bin/rimraf lib",
     "coverage": "gulp coverage",
     "build": "gulp build",
     "watch": "gulp watch",
@@ -47,21 +52,21 @@
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "del": "^2.2.0",
-    "eslint": "^2.13.1",
-    "eslint-config-airbnb-base": "^3.0.1",
+    "eslint": "^3.2.2",
+    "eslint-config-airbnb-base": "^5.0.1",
     "eslint-plugin-import": "^1.9.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-load-plugins": "^1.2.0",
-    "gulp-mocha": "^2.2.0",
+    "gulp-mocha": "^3.0.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "isparta": "^4.0.0",
     "mkdirp": "^0.5.1",
-    "mocha": "^2.5.3",
+    "mocha": "^3.0.0",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
-    "updtr": "^0.1.15"
+    "updtr": "^0.2.1"
   },
   "nodeBoilerplateOptions": {
     "mochaGlobals": [
