--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "JSONStream": "^1.1.2",
     "body-parser": "^1.15.2",
+    "cache-manager": "^2.1.2",
     "connect": "^3.4.1",
     "csv-stream": "^0.1.3",
     "del": "^2.2.1",
