--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
+    "bluebird": "^3.4.6",
     "chai": "^3.5.0",
     "del": "^2.2.0",
     "eslint": "^3.2.2",
