--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "JSONStream": "^1.1.2",
+    "batch-stream": "^0.1.3",
     "body-parser": "^1.15.2",
     "cache-manager": "^2.1.2",
     "connect": "^3.4.1",
@@ -36,10 +37,12 @@
     "jwt-simple": "^0.5.0",
     "lodash": "^4.13.1",
     "passport": "^0.3.2",
+    "promise-streams": "^1.0.1",
     "raw-body": "^2.1.7",
     "request": "^2.72.0",
     "restler": "^3.4.0",
     "sns-validator": "^0.2.1",
+    "urijs": "^1.18.7",
     "winston": "^2.2.0"
   },
   "devDependencies": {
