--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "license": "MIT",
   "scripts": {
     "test": "npm run test:lint && npm run test:units",
-    "test:lint": "./node_modules/.bin/eslint server",
+    "test:lint": "eslint src",
     "test:modules": "npm outdated --depth=0",
-    "test:units": "NODE_ENV=test ./node_modules/.bin/mocha -R spec ./tests/index",
+    "test:units": "NODE_ENV=test mocha -R spec ./tests/index",
     "update": "./node_modules/.bin/updtr",
     "clean": "./node_modules/.bin/rimraf lib",
     "coverage": "gulp coverage",
@@ -27,21 +27,32 @@
   },
   "dependencies": {
     "JSONStream": "^1.1.2",
+    "basic-auth": "^1.1.0",
     "batch-stream": "^0.1.3",
+    "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
     "cache-manager": "^2.1.2",
     "connect": "^3.4.1",
+    "connect-timeout": "^1.8.0",
     "csv-stream": "^0.1.3",
+    "datadog-metrics": "^0.3.0",
     "del": "^2.2.1",
+    "dogapi": "^2.6.0",
+    "ejs": "^2.5.6",
     "express": "^4.14.0",
     "jwt-simple": "^0.5.0",
+    "kue": "^0.11.5",
+    "kue-ui": "^0.1.0",
     "lodash": "^4.13.1",
+    "newrelic": "^1.37.2",
     "passport": "^0.3.2",
     "promise-streams": "^1.0.1",
+    "raven": "^1.1.2",
     "raw-body": "^2.1.7",
     "request": "^2.72.0",
     "restler": "^3.4.0",
     "sns-validator": "^0.2.1",
+    "supply": "0.0.4",
     "urijs": "^1.18.7",
     "winston": "^2.2.0"
   },
