--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build": "gulp build",
     "watch": "gulp watch",
     "prepublish": "npm run build",
-    "postinstall": "npm run build"
+    "postinstall": "npm run clean && babel src -d lib"
   },
   "dependencies": {
     "JSONStream": "^1.1.2",
@@ -59,6 +59,7 @@
   },
   "devDependencies": {
     "babel": "^6.5.2",
+    "babel-cli": "^6.23.0",
     "babel-eslint": "^7.1.1",
     "babel-plugin-lodash": "^3.2.0",
     "babel-preset-es2015": "^6.9.0",
