--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "isparta": "^4.0.0",
     "mkdirp": "^0.5.1",
     "mocha": "^3.0.0",
+    "rimraf": "^2.6.0",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
     "updtr": "^0.2.1"
