--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hull",
-  "version": "0.11.0",
+  "version": "0.11.0-beta.1",
   "description": "A Node.js client for hull.io",
   "main": "lib",
   "repository": {
@@ -23,8 +23,7 @@
     "coverage": "gulp coverage",
     "build": "gulp build",
     "watch": "gulp watch",
-    "prepublish": "npm run build",
-    "postinstall": "npm run clean && babel src -d lib"
+    "prepublish": "npm run build"
   },
   "dependencies": {
     "JSONStream": "^1.1.2",
