--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "isparta": "^4.0.0",
     "mkdirp": "^0.5.1",
     "mocha": "^3.0.0",
+    "node-mocks-http": "^1.6.1",
     "rimraf": "^2.6.0",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
