--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hull",
-  "version": "0.11.0-beta.4",
+  "version": "0.11.0",
   "description": "A Node.js client for hull.io",
   "main": "lib",
   "repository": {
@@ -18,8 +18,8 @@
     "test:lint": "eslint src",
     "test:modules": "npm outdated --depth=0",
     "test:units": "NODE_ENV=test mocha --require babel-register -R spec ./tests/* ./tests/**/*",
-    "update": "./node_modules/.bin/updtr",
-    "clean": "./node_modules/.bin/rimraf lib",
+    "update": "updtr",
+    "clean": "rimraf lib",
     "coverage": "gulp coverage",
     "build": "gulp build",
     "watch": "gulp watch",
@@ -35,7 +35,7 @@
     "connect": "^3.4.1",
     "connect-timeout": "^1.8.0",
     "csv-stream": "^0.1.3",
-    "datadog-metrics": "^0.3.0",
+    "datadog-metrics": "^0.4.0",
     "del": "^2.2.1",
     "dogapi": "^2.6.0",
     "ejs": "^2.5.6",
@@ -51,7 +51,7 @@
     "raw-body": "^2.1.7",
     "request": "^2.72.0",
     "restler": "^3.4.0",
-    "sns-validator": "^0.2.1",
+    "sns-validator": "^0.3.0",
     "supply": "0.0.4",
     "urijs": "^1.18.7",
     "winston": "^2.2.0"
@@ -73,16 +73,16 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-load-plugins": "^1.2.0",
-    "gulp-mocha": "^3.0.0",
+    "gulp-mocha": "^4.3.1",
     "gulp-plumber": "^1.1.0",
     "isparta": "^4.0.0",
     "mkdirp": "^0.5.1",
     "mocha": "^3.0.0",
     "node-mocks-http": "^1.6.1",
     "rimraf": "^2.6.0",
-    "sinon": "^1.17.3",
+    "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
-    "updtr": "^0.2.1"
+    "updtr": "^1.0.0"
   },
   "nodeBoilerplateOptions": {
     "mochaGlobals": [
