--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   "author": "Romain Dardour <romain@hull.io>",
   "license": "MIT",
   "scripts": {
-    "test": "npm run test:lint && npm run test:units",
+    "test": "npm run test:lint && npm run test:flow && npm run test:units",
     "test:lint": "eslint src",
     "test:modules": "npm outdated --depth=0",
     "test:units": "NODE_ENV=test mocha --require babel-register -R spec ./tests/* ./tests/**/*",
+    "test:flow": "flow check",
     "update": "updtr",
     "clean": "rimraf lib",
     "coverage": "gulp coverage",
@@ -44,7 +45,7 @@
     "kue": "^0.11.5",
     "kue-ui": "^0.1.0",
     "lodash": "^4.13.1",
-    "newrelic": "^1.37.2",
+    "newrelic": "^1.39.0",
     "passport": "^0.3.2",
     "promise-streams": "^1.0.1",
     "raven": "^1.1.2",
@@ -58,10 +59,11 @@
   },
   "devDependencies": {
     "babel": "^6.5.2",
-    "babel-cli": "^6.23.0",
+    "babel-cli": "^6.24.1",
     "babel-eslint": "^7.1.1",
     "babel-plugin-lodash": "^3.2.0",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
     "bluebird": "^3.4.6",
@@ -70,6 +72,7 @@
     "eslint": "^3.2.2",
     "eslint-config-airbnb-base": "^11.1.0",
     "eslint-plugin-import": "^2.2.0",
+    "flow-bin": "^0.45.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-load-plugins": "^1.2.0",
@@ -80,8 +83,8 @@
     "mocha": "^3.0.0",
     "node-mocks-http": "^1.6.1",
     "rimraf": "^2.6.0",
-    "sinon": "^2.1.0",
-    "sinon-chai": "^2.8.0",
+    "sinon": "^2.2.0",
+    "sinon-chai": "^2.10.0",
     "updtr": "^1.0.0"
   },
   "nodeBoilerplateOptions": {
