--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hull",
-  "version": "0.10.8",
+  "version": "0.11.0",
   "description": "A Node.js client for hull.io",
   "main": "lib",
   "repository": {
@@ -14,12 +14,13 @@
   "author": "Romain Dardour <romain@hull.io>",
   "license": "MIT",
   "scripts": {
-    "test": "npm run test:lint && npm run test:units",
-    "test:lint": "./node_modules/.bin/eslint server",
+    "test": "npm run test:lint && npm run test:flow && npm run test:units",
+    "test:lint": "eslint src",
     "test:modules": "npm outdated --depth=0",
-    "test:units": "NODE_ENV=test ./node_modules/.bin/mocha -R spec ./tests/index",
-    "update": "./node_modules/.bin/updtr",
-    "clean": "./node_modules/.bin/rimraf lib",
+    "test:units": "NODE_ENV=test mocha --require babel-register -R spec ./tests/* ./tests/**/* ./spec/*",
+    "test:flow": "flow check",
+    "update": "updtr",
+    "clean": "rimraf lib",
     "coverage": "gulp coverage",
     "build": "gulp build",
     "watch": "gulp watch",
@@ -27,26 +28,42 @@
   },
   "dependencies": {
     "JSONStream": "^1.1.2",
+    "basic-auth": "^1.1.0",
+    "batch-stream": "^0.1.3",
+    "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
     "cache-manager": "^2.1.2",
     "connect": "^3.4.1",
+    "connect-timeout": "^1.8.0",
     "csv-stream": "^0.1.3",
+    "datadog-metrics": "^0.4.0",
     "del": "^2.2.1",
+    "dogapi": "^2.6.0",
+    "ejs": "^2.5.6",
     "express": "^4.14.0",
     "jwt-simple": "^0.5.0",
+    "kue": "^0.11.5",
+    "kue-ui": "^0.1.0",
     "lodash": "^4.13.1",
+    "newrelic": "^1.39.0",
     "passport": "^0.3.2",
+    "promise-streams": "^1.0.1",
+    "raven": "^1.1.2",
     "raw-body": "^2.1.7",
     "request": "^2.72.0",
     "restler": "^3.4.0",
-    "sns-validator": "^0.2.1",
+    "sns-validator": "^0.3.0",
+    "supply": "0.0.4",
+    "urijs": "^1.18.7",
     "winston": "^2.2.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
+    "babel-cli": "^6.24.1",
     "babel-eslint": "^7.1.1",
     "babel-plugin-lodash": "^3.2.0",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
     "bluebird": "^3.4.6",
@@ -55,17 +72,20 @@
     "eslint": "^3.2.2",
     "eslint-config-airbnb-base": "^11.1.0",
     "eslint-plugin-import": "^2.2.0",
+    "flow-bin": "^0.45.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-load-plugins": "^1.2.0",
-    "gulp-mocha": "^3.0.0",
+    "gulp-mocha": "^4.3.1",
     "gulp-plumber": "^1.1.0",
     "isparta": "^4.0.0",
     "mkdirp": "^0.5.1",
     "mocha": "^3.0.0",
-    "sinon": "^1.17.3",
-    "sinon-chai": "^2.8.0",
-    "updtr": "^0.2.1"
+    "node-mocks-http": "^1.6.1",
+    "rimraf": "^2.6.0",
+    "sinon": "^2.2.0",
+    "sinon-chai": "^2.10.0",
+    "updtr": "^1.0.0"
   },
   "nodeBoilerplateOptions": {
     "mochaGlobals": [
