--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "sns-validator": "^0.3.0",
     "supply": "0.0.4",
     "urijs": "^1.18.7",
+    "uuid": "^3.0.1",
     "winston": "^2.2.0"
   },
   "devDependencies": {
