--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "batch-stream": "^0.1.3",
     "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
+    "bull": "^3.0.0-rc.3",
+    "bull-arena": "^1.3.1",
     "cache-manager": "^2.1.2",
     "connect": "^3.4.1",
     "connect-timeout": "^1.8.0",
