--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hull",
-  "version": "0.11.4",
+  "version": "0.11.5",
   "description": "A Node.js client for hull.io",
   "main": "lib",
   "repository": {
@@ -32,6 +32,7 @@
     "batch-stream": "^0.1.3",
     "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
+    "bull": "^3.0.0-rc.3",
     "cache-manager": "^2.1.2",
     "connect": "^3.4.1",
     "connect-timeout": "^1.8.0",
