--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hull",
-  "version": "0.12.0",
+  "version": "0.12.0-beta.1",
   "description": "A Node.js client for hull.io",
   "main": "lib",
   "repository": {
@@ -27,7 +27,8 @@
     "prepublish": "npm run build"
   },
   "dependencies": {
-    "aws-sdk":"^2.81.0",
+    "JSONStream": "^1.1.2",
+    "aws-sdk": "^2.81.0",
     "basic-auth": "^1.1.0",
     "batch-stream": "^0.1.3",
     "bluebird": "^3.4.7",
@@ -42,8 +43,7 @@
     "dogapi": "^2.6.0",
     "ejs": "^2.5.6",
     "express": "^4.14.0",
-    "hull-client": "^1.0.5",
-    "JSONStream": "^1.1.2",
+    "hull-client": "^1.1.0",
     "jwt-simple": "^0.5.0",
     "kue": "^0.11.5",
     "kue-ui": "^0.1.0",
@@ -56,16 +56,16 @@
     "request": "^2.72.0",
     "restler": "^3.4.0",
     "sns-validator": "^0.3.0",
-    "sqs-consumer" : "^3.6.1",
+    "sqs-consumer": "^3.6.1",
     "supply": "0.0.4",
     "urijs": "^1.18.7"
   },
-  "peerDependencies" : {
-    "aws-sdk":"^2.81.0",
-    "sqs-consumer" : "^3.6.1"
+  "peerDependencies": {
+    "aws-sdk": "^2.81.0",
+    "sqs-consumer": "^3.6.1"
   },
   "devDependencies": {
-    "aws-sdk":"^2.81.0",
+    "aws-sdk": "^2.81.0",
     "babel": "^6.5.2",
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.1.1",
@@ -74,9 +74,7 @@
     "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
-    "bluebird": "^3.4.6",
     "chai": "^3.5.0",
-    "del": "^2.2.0",
     "eslint": "^3.2.2",
     "eslint-config-airbnb-base": "^11.1.0",
     "eslint-plugin-import": "^2.2.0",
@@ -94,7 +92,7 @@
     "rimraf": "^2.6.0",
     "sinon": "^2.2.0",
     "sinon-chai": "^2.10.0",
-    "sqs-consumer" : "^3.6.1",
+    "sqs-consumer": "^3.6.1",
     "updtr": "^1.0.0"
   },
   "nodeBoilerplateOptions": {
