--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hull",
-  "version": "0.13.0-beta.4",
+  "version": "0.13.0-beta.5",
   "description": "A Node.js client for hull.io",
   "main": "lib",
   "repository": {
@@ -45,18 +45,17 @@
     "ejs": "^2.5.6",
     "express": "^4.14.0",
     "hull-client": "1.1.1",
+    "jsonwebtoken": "^7.4.2",
     "jwt-simple": "^0.5.0",
     "kue": "^0.11.5",
     "kue-ui": "^0.1.0",
     "lodash": "^4.13.1",
     "newrelic": "^1.39.0",
-    "nyc": "^11.0.3",
     "passport": "^0.3.2",
     "promise-streams": "^1.0.1",
     "raven": "^1.1.2",
     "raw-body": "^2.1.7",
     "request": "^2.72.0",
-    "restler": "^3.4.0",
     "sns-validator": "^0.3.0",
     "sqs-consumer": "^3.6.1",
     "supply": "0.0.4",
@@ -67,7 +66,6 @@
     "sqs-consumer": "^3.6.1"
   },
   "devDependencies": {
-    "aws-sdk": "^2.81.0",
     "babel": "^6.5.2",
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.1.1",
@@ -91,10 +89,10 @@
     "mkdirp": "^0.5.1",
     "mocha": "^3.0.0",
     "node-mocks-http": "^1.6.1",
+    "nyc": "^11.0.3",
     "rimraf": "^2.6.0",
     "sinon": "^2.2.0",
     "sinon-chai": "^2.10.0",
-    "sqs-consumer": "^3.6.1",
     "updtr": "^1.0.0"
   },
   "nodeBoilerplateOptions": {
