--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hull",
-  "version": "0.13.0-beta.12",
+  "version": "0.13.0",
   "description": "A Node.js client for hull.io",
   "main": "lib",
   "repository": {
