--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test:coverage": "nyc --babel-cache --hook-run-in-context false npm run test",
     "update": "updtr",
     "clean": "rimraf lib",
-    "build": "gulp build",
+    "build": "npm run clean && gulp build",
     "watch": "gulp watch",
     "prepublish": "npm run build"
   },
@@ -70,6 +70,7 @@
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.1.1",
     "babel-plugin-lodash": "^3.2.0",
+    "babel-plugin-transform-flow-comments": "^6.22.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-0": "^6.5.0",
