--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "test:coverage": "nyc --babel-cache --hook-run-in-context false npm run test",
     "update": "updtr",
     "clean": "rimraf lib",
-    "build": "npm run clean && gulp build",
-    "watch": "gulp watch",
+    "build": "npm run clean && babel src -d lib",
     "prepublish": "npm run build"
   },
   "dependencies": {
@@ -61,7 +60,7 @@
     "supply": "0.0.4",
     "urijs": "^1.18.7"
   },
-  "peerDependencies": {
+  "optionalDependencies": {
     "aws-sdk": "^2.81.0",
     "sqs-consumer": "^3.6.1"
   },
@@ -69,11 +68,7 @@
     "babel": "^6.5.2",
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.1.1",
-    "babel-plugin-lodash": "^3.2.0",
     "babel-plugin-transform-flow-comments": "^6.22.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
@@ -81,11 +76,6 @@
     "eslint-config-airbnb-base": "^11.1.0",
     "eslint-plugin-import": "^2.2.0",
     "flow-bin": "^0.45.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-load-plugins": "^1.2.0",
-    "gulp-mocha": "^4.3.1",
-    "gulp-plumber": "^1.1.0",
     "isparta": "^4.0.0",
     "minihull": "0.0.7",
     "mkdirp": "^0.5.1",
