--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "supply": "0.0.4",
     "urijs": "^1.18.7"
   },
-  "optionalDependencies": {
+  "peerDependencies": {
     "aws-sdk": "^2.81.0",
     "sqs-consumer": "^3.6.1"
   },
