--- a/.eslintrc
+++ b/.eslintrc
@@ -17,5 +17,11 @@
     "no-console": [0],
     "eqeqeq": [1]
   },
-  "extends": "airbnb-base"
+  "extends": [
+    "airbnb-base",
+    "plugin:flowtype/recommended"
+  ],
+  "plugins": [
+    "flowtype"
+  ],
 }
