--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,8 @@
     "arrow-body-style" : [0],
     "no-param-reassign" : [0],
     "no-console": [0],
-    "eqeqeq": [1]
+    "eqeqeq": [1],
+    "spaced-comment": ["error", "always", { "markers": [":", "::"] }]
   },
   "extends": [
     "airbnb-base",
