--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,4 +24,4 @@ jobs:
             mv $OUTPUT hull-node.tgz
       - store_artifacts:
           path: ~/repo/hull-node.tgz
-          destination: /
+          destination: /hull-node.tgz
