--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,6 @@
 version: 2
+
 shared: &shared
-    docker:
-      - image: circleci/node:6.12
     working_directory: ~/repo
     steps:
       - checkout
@@ -26,7 +25,18 @@ shared: &shared
           destination: /hull-node.tgz
 
 jobs:
-  "ruby-2.2":
+  "node-6.12":
+    <<: *shared
+    docker:
+      - image: circleci/node:6.12
+  "node-8.9":
     <<: *shared
     docker:
       - image: circleci/node:8.9
+
+workflows:
+  version: 2
+  build:
+    jobs:
+      - "node-6.12"
+      - "node-8.9"
