Fixed error handling flow

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "newrelic": "^2.4.1",
     "passport": "^0.3.2",
     "promise-streams": "^1.0.1",
-    "raven": "^1.1.2",
+    "raven": "^2.4.2",
     "raw-body": "^2.1.7",
     "request": "^2.72.0",
     "sns-validator": "^0.3.0",
@@ -81,7 +81,7 @@
     "eslint-plugin-import": "^2.2.0",
     "flow-bin": "^0.59.0",
     "isparta": "^4.0.0",
-    "minihull": "0.0.7",
+    "minihull": "^2.1.1",
     "mkdirp": "^0.5.1",
     "mocha": "^3.0.0",
     "node-mocks-http": "^1.6.1",
