--- a/package.json
+++ b/package.json
@@ -84,11 +84,13 @@
     "minihull": "^2.1.1",
     "mkdirp": "^0.5.1",
     "mocha": "^3.0.0",
+    "nock": "^9.2.3",
     "node-mocks-http": "^1.6.1",
     "nyc": "^11.0.3",
     "rimraf": "^2.6.0",
     "sinon": "^2.2.0",
     "sinon-chai": "^2.10.0",
+    "superagent": "^3.8.2",
     "updtr": "^1.0.0"
   },
   "nodeBoilerplateOptions": {
