--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "dev": "babel src -d lib -w",
     "prepublish": "npm run build",
     "documentation": "documentation build src -f md -o API.md --access public",
-    "precommit": "npm run documentation"
+    "precommit": "npm run documentation && git add API.md"
   },
   "dependencies": {
     "JSONStream": "^1.1.2",
