--- a/package.json
+++ b/package.json
@@ -48,12 +48,12 @@
     "del": "^2.2.1",
     "dogapi": "^2.6.0",
     "ejs": "^2.5.6",
-    "hull-client": "1.1.5",
+    "hull-client": "^1.2.0",
     "jsonwebtoken": "^7.4.3",
     "jwt-simple": "^0.5.0",
     "kue": "^0.11.5",
     "kue-ui": "^0.1.0",
-    "lodash": "^4.13.1",
+    "lodash": "^4.17.5",
     "newrelic": "^2.4.1",
     "passport": "^0.3.2",
     "promise-streams": "^1.0.1",
@@ -83,6 +83,7 @@
     "eslint-plugin-flowtype": "^2.39.1",
     "eslint-plugin-import": "^2.2.0",
     "flow-bin": "^0.68.0",
+    "flow-typed": "^2.4.0",
     "husky": "^0.14.3",
     "isparta": "^4.0.0",
     "minihull": "^2.1.1",
