--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build": "npm run clean && babel src -d lib",
     "dev": "babel src -d lib -w",
     "prepublish": "npm run build",
-    "documentation": "documentation build src -f md -o API.md --access public",
+    "documentation": "documentation build src -f md -o API.md --access public --config documentation.yml",
     "precommit": "npm run documentation && git add API.md"
   },
   "dependencies": {
