--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hull",
-  "version": "0.13.11",
+  "version": "0.13.12",
   "description": "A Node.js client for hull.io",
   "main": "lib",
   "repository": {
@@ -29,7 +29,7 @@
     "build": "npm run clean && babel src -d lib",
     "dev": "babel src -d lib -w",
     "prepublish": "npm run build",
-    "documentation": "documentation build src -f md -o API.md --access public --config documentation.yml",
+    "documentation": "documentation build src -f md -o API.md --access public --markdownToc=false",
     "precommit": "npm run documentation && git add API.md"
   },
   "dependencies": {
