--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "del": "^2.2.1",
     "dogapi": "^2.6.0",
     "ejs": "^2.5.6",
-    "hull-client": "^1.2.0",
+    "hull-client": "https://94-94888266-gh.circle-artifacts.com/0/hull-client-node.tgz",
     "jsonwebtoken": "^7.4.3",
     "jwt-simple": "^0.5.0",
     "kue": "^0.11.5",
