Update babel configuration

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "del": "^2.2.1",
     "dogapi": "^2.6.0",
     "ejs": "^2.5.6",
-    "hull-client": "https://98-94888266-gh.circle-artifacts.com/0/hull-client-node.tgz",
+    "hull-client": "https://108-94888266-gh.circle-artifacts.com/0/hull-client-node.tgz",
     "jsonwebtoken": "^7.4.3",
     "jwt-simple": "^0.5.0",
     "kue": "^0.11.5",
@@ -74,6 +74,7 @@
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.1.1",
     "babel-plugin-transform-flow-comments": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
