--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hull",
-  "version": "0.13.14",
+  "version": "0.13.15",
   "description": "A Node.js client for hull.io",
   "main": "lib",
   "repository": {
@@ -90,12 +90,13 @@
     "mkdirp": "^0.5.1",
     "mocha": "^3.0.0",
     "nock": "^9.2.3",
-    "node-mocks-http": "^1.6.1",
+    "node-mocks-http": "^1.7.0",
     "nyc": "^11.0.3",
     "rimraf": "^2.6.0",
     "sinon": "^2.2.0",
     "sinon-chai": "^2.10.0",
     "superagent": "^3.8.2",
+    "supertest": "^3.1.0",
     "updtr": "^1.0.0"
   },
   "nodeBoilerplateOptions": {
