--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hull",
-  "version": "0.13.15",
+  "version": "0.14.0-beta.1",
   "description": "A Node.js client for hull.io",
   "main": "lib",
   "repository": {
@@ -48,7 +48,7 @@
     "del": "^2.2.1",
     "dogapi": "^2.6.0",
     "ejs": "^2.5.6",
-    "hull-client": "https://303-94888266-gh.circle-artifacts.com/0/hull-client-node.tgz",
+    "hull-client": "2.0.0-beta.1",
     "jsonwebtoken": "^7.4.3",
     "jwt-simple": "^0.5.0",
     "kue": "^0.11.5",
