--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "connect-timeout": "^1.8.0",
     "csv-stream": "^0.1.3",
     "datadog-metrics": "^0.4.0",
+    "debug": "^3.1.0",
     "del": "^2.2.1",
     "dogapi": "^2.6.0",
     "ejs": "^2.5.6",
@@ -78,7 +79,7 @@
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
-    "documentation": "^6.1.0",
+    "documentation": "^6.3.3",
     "eslint": "^3.2.2",
     "eslint-config-airbnb-base": "^11.1.0",
     "eslint-plugin-flowtype": "^2.39.1",
