--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "JSONStream": "^1.1.2",
     "aws-sdk": "^2.81.0",
+    "babel-polyfill": "^6.26.0",
     "basic-auth": "^1.1.0",
     "batch-stream": "^0.1.3",
     "bluebird": "^3.4.7",
@@ -56,14 +57,19 @@
     "lodash": "^4.17.5",
     "newrelic": "^2.4.1",
     "passport": "^0.3.2",
+    "progress-bar-webpack-plugin": "^1.11.0",
     "promise-streams": "^1.0.1",
     "raven": "^2.4.2",
     "raw-body": "^2.1.7",
+    "react-hot-loader": "^4.2.0",
     "request": "^2.72.0",
     "sns-validator": "^0.3.0",
     "sqs-consumer": "^3.6.1",
     "supply": "0.0.4",
-    "urijs": "^1.18.7"
+    "urijs": "^1.18.7",
+    "webpack": "^3.12.0",
+    "webpack-dev-middleware": "^2.0.6",
+    "webpack-hot-middleware": "^2.22.2"
   },
   "peerDependencies": {
     "express": "^4.16.2",
@@ -74,6 +80,7 @@
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.1.1",
     "babel-plugin-transform-flow-comments": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
