--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "del": "^2.2.1",
     "dogapi": "^2.6.0",
     "ejs": "^2.5.6",
-    "hull-client": "2.0.0-beta.3",
+    "hull-client": "^2.0.0",
     "jsonwebtoken": "^7.4.3",
     "jwt-simple": "^0.5.0",
     "kue": "^0.11.5",
@@ -90,7 +90,7 @@
     "eslint-config-airbnb-base": "^11.1.0",
     "eslint-plugin-flowtype": "^2.39.1",
     "eslint-plugin-import": "^2.2.0",
-    "flow-bin": "^0.71.0",
+    "flow-bin": "^0.74.0",
     "flow-typed": "^2.4.0",
     "husky": "^0.14.3",
     "isparta": "^4.0.0",
