--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "passport": "^0.3.2",
     "progress-bar-webpack-plugin": "^1.11.0",
     "promise-streams": "^1.0.1",
+    "promisepipe": "^2.1.3",
     "raven": "^2.4.2",
     "raw-body": "^2.1.7",
     "react-hot-loader": "^4.2.0",
