--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "sqs-consumer": "^3.6.1",
     "supply": "0.0.4",
     "urijs": "^1.18.7",
+    "uuid": "^3.3.2",
     "webpack": "^3.12.0",
     "webpack-dev-middleware": "^2.0.6",
     "webpack-hot-middleware": "^2.22.2"
