--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hull",
-  "version": "0.14.0-beta.10",
+  "version": "0.14.0-beta.11",
   "description": "A Node.js client for hull.io",
   "main": "lib",
   "repository": {
@@ -56,6 +56,7 @@
     "kue": "^0.11.5",
     "kue-ui": "^0.1.0",
     "lodash": "^4.17.5",
+    "moment": "^2.22.2",
     "newrelic": "^4.1.4",
     "passport": "^0.3.2",
     "progress-bar-webpack-plugin": "^1.11.0",
