enforce code standards
- prettier
- lint
- flow

before commits.

--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,6 @@
 {
-  "plugins": ["transform-flow-comments", ["transform-object-rest-spread", { "useBuiltIns": true }]]
+  "plugins": [
+    "transform-flow-comments",
+    ["transform-object-rest-spread", { "useBuiltIns": true }]
+  ]
 }
