--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build": "npm run clean && babel src -d lib",
     "dev": "babel src -d lib -w",
     "prepublish": "npm run build",
-    "documentation": "documentation build src -f md -o API.md --access public --markdownToc=false",
+    "documentation": "documentation build src/**/* src/types.js -f md -o API.md --access public --markdownToc=false",
     "precommit": "npm run documentation && git add API.md"
   },
   "dependencies": {
@@ -88,7 +88,7 @@
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
-    "documentation": "^6.3.3",
+    "documentation": "^8.1.2",
     "eslint": "^3.2.2",
     "eslint-config-airbnb-base": "^11.1.0",
     "eslint-plugin-flowtype": "^2.39.1",
