--- a/package.json
+++ b/package.json
@@ -12,71 +12,67 @@
     "url": "https://github.com/hull/hull-node/issues"
   },
   "engines": {
-    "node": ">=6.12.0"
+    "node": "^8.11.x",
+    "yarn": "^1.6.x"
   },
-  "author": "Romain Dardour <romain@hull.io>",
+  "author": {
+    "name": "Hull",
+    "email": "contact@hull.io",
+    "url": "https://github.com/hull"
+  },
   "license": "MIT",
   "scripts": {
+    "build": "yarn clean && babel src -d lib && flow-copy-source src lib",
+    "clean": "rimraf lib",
+    "dev": "babel src -d lib -w",
+    "documentation:lint": "documentation lint src",
+    "documentation": "documentation build src -f md -o API.md --access public --markdownToc=false",
+    "flow:stop": "flow stop",
     "flow": "flow",
     "lint": "eslint src",
-    "documentation:lint": "documentation lint src",
-    "prettier": "prettier --write \"./src/**/*.{js,json}\"",
-    "test": "npm run test:lint && npm run test:flow && npm run test:unit && npm run test:integration",
-    "test:lint": "yarn lint && yarn documentation:lint",
-    "test:modules": "npm outdated --depth=0",
-    "test:unit": "NODE_ENV=test mocha --require babel-register -R spec ./test/unit/*.js ./test/unit/**/*.js",
-    "test:integration": "NODE_ENV=test mocha --require babel-register -R spec ./test/integration/*.js",
+    "prepublish": "yarn build",
+    "test:coverage": "nyc --babel-cache --hook-run-in-context false yarn test",
     "test:flow": "flow check",
-    "test:coverage": "nyc --babel-cache --hook-run-in-context false npm run test",
+    "test:integration": "NODE_ENV=test mocha --require @babel/register -R spec ./test/integration/*.js",
+    "test:lint": "yarn lint",
+    "test:modules": "npm outdated --depth=0",
+    "test:unit": "NODE_ENV=test mocha --require @babel/register -R spec ./test/unit/*.js ./test/unit/**/*.js",
+    "test": "yarn test:lint && yarn test:flow && yarn test:unit && yarn test:integration",
     "update": "updtr",
-    "clean": "rimraf lib",
-    "build": "npm run clean && babel src -d lib",
-    "dev": "babel src -d lib -w",
-    "prepublish": "npm run build",
-    "documentation": "documentation build src -f md -o API.md --access public --markdownToc=false",
-    "precommit": "yarn lint && yarn flow && lint-staged && npm run documentation && git add API.md"
-  },
-  "lint-staged": {
-    "linters": {
-      "*.{js,jsx,css,less,json}": ["prettier","git add"]
-    }
-  },
-  "prettier": {
-    "trailingComma": "es5",
-    "singleQuote": false,
-    "arrowParens": "avoid",
-    "semi": true
+    "watch": "./node_modules/.bin/watch 'yarn build' src",
+    "precommit": "yarn lint && yarn flow && git add API.md"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "JSONStream": "^1.1.2",
-    "aws-sdk": "^2.81.0",
-    "babel-polyfill": "^6.26.0",
-    "basic-auth": "^1.1.0",
+    "aws-sdk": "^2.224.1",
+    "basic-auth": "^2.0.0",
     "batch-stream": "^0.1.3",
-    "bluebird": "^3.4.7",
-    "body-parser": "^1.15.2",
+    "bluebird": "^3.5.0",
+    "body-parser": "^1.18.3",
     "bull": "^3.0.0-rc.3",
-    "cache-manager": "2.6.0",
+    "cache-manager": "2.9.0",
     "connect": "^3.4.1",
     "connect-timeout": "^1.8.0",
-    "csv-stream": "^0.1.3",
-    "datadog-metrics": "^0.4.0",
+    "csv-stream": "^0.2.0",
+    "datadog-metrics": "^0.8.1",
     "debug": "^3.1.0",
-    "del": "^2.2.1",
+    "del": "^3.0.0",
     "dogapi": "^2.6.0",
     "ejs": "^2.5.6",
+    "express": "^4.16.3",
     "hull-client": "^2.0.0",
-    "jsonwebtoken": "^7.4.3",
+    "jsonwebtoken": "^8.3.0",
     "jwt-simple": "^0.5.0",
     "kue": "^0.11.5",
     "kue-ui": "^0.1.0",
     "lodash": "^4.17.5",
     "moment": "^2.22.2",
     "newrelic": "^4.1.4",
-    "passport": "^0.3.2",
+    "passport": "^0.4.0",
     "progress-bar-webpack-plugin": "^1.11.0",
-    "promise-streams": "^1.0.1",
-    "promisepipe": "^2.1.3",
+    "promise-streams": "^2.1.1",
+    "promisepipe": "^3.0.0",
     "raven": "^2.4.2",
     "raw-body": "^2.1.7",
     "react-hot-loader": "^4.2.0",
@@ -86,8 +82,8 @@
     "supply": "0.0.4",
     "urijs": "^1.18.7",
     "uuid": "^3.3.2",
-    "webpack": "^3.12.0",
-    "webpack-dev-middleware": "^2.0.6",
+    "webpack": "^4.18.0",
+    "webpack-dev-middleware": "^3.3.0",
     "webpack-hot-middleware": "^2.22.2"
   },
   "peerDependencies": {
@@ -95,39 +91,43 @@
     "newrelic": "^4.1.4"
   },
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-cli": "^6.24.1",
-    "babel-eslint": "^8.2.2",
-    "babel-plugin-transform-flow-comments": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-register": "^6.26.0",
-    "chai": "^3.5.0",
-    "chai-http": "^3.0.0",
-    "documentation": "^6.3.3",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-transform-flow-comments": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.0",
+    "chai": "^4.1.2",
+    "chai-http": "^4.2.0",
+    "compose-middleware": "^5.0.0",
+    "documentation": "https://github.com/documentationjs/documentation#372c8caa48b60bb0da647a97fc3fed8ade3a0abb",
     "eslint": "^5.3.0",
-    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-prettier": "^3.0.1",
     "eslint-plugin-flowtype": "^2.50.0",
     "eslint-plugin-flowtype-errors": "^3.6.0",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-prettier": "^2.6.2",
-    "flow-bin": "^0.78.0",
+    "flow-bin": "^0.80.0",
+    "flow-copy-source": "^2.0.2",
     "flow-typed": "^2.4.0",
     "husky": "^0.14.3",
     "isparta": "^4.0.0",
-    "lint-staged": "^7.2.0",
-    "minihull": "^3.0.0",
+    "minihull": "3.0.2",
     "mkdirp": "^0.5.1",
-    "mocha": "^3.0.0",
+    "mocha": "^5.0.4",
     "nock": "^9.2.3",
     "node-mocks-http": "^1.7.0",
-    "nyc": "^11.0.3",
+    "nyc": "^13.0.1",
     "prettier": "^1.14.2",
     "rimraf": "^2.6.0",
-    "sinon": "^2.2.0",
-    "sinon-chai": "^2.10.0",
+    "sinon": "^6.2.0",
+    "sinon-chai": "^3.2.0",
     "superagent": "^3.8.2",
     "supertest": "^3.1.0",
-    "updtr": "^1.0.0"
+    "updtr": "^2.0.0",
+    "watch": "^1.0.2"
   },
   "nodeBoilerplateOptions": {
     "mochaGlobals": [
